--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-09-03}
+    \date{2018-09-07}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -255,6 +255,9 @@ and intuition behind these methods, as well as a more formal statistical
 and computational understanding. You will have an opportunity to
 experiment with machine learning techniques in R and apply them to a
 selected problem.
+
+\section*{Course Overview}\label{course-overview}
+\addcontentsline{toc}{section}{Course Overview}
 
 \chapter*{Introduction}\label{introduction}
 \addcontentsline{toc}{chapter}{Introduction}
@@ -2048,6 +2051,644 @@ assess the model we created, then we will be using the test data!
 \CommentTok{#ans> [1] 17.7}
 \end{Highlighting}
 \end{Shaded}
+
+◼
+
+\chapter{Multiple Linear Regression}\label{multiple-linear-regression}
+
+Simple linear regression is a useful approach for predicting a response
+on the basis of a single predictor variable. However, in practice we
+often have more than one predictor. In the previous chapter, we took for
+example the prediction of housing prices considering we had the size of
+each house. We had a single feature \(X\), the size of the house. But
+now imagine if we had not only the size of the house as a feature but we
+also knew the number of bedrooms, the number of flours and the age of
+the house in years. It seems like this would give us a lot more
+information with which to predict the price.
+
+\section{The Model}\label{the-model}
+
+In general, suppose that we have \(p\) distinct predictors. Then the
+multiple linear regression model takes the form
+
+\[ Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \dots + \beta_p X_p + \epsilon \]
+
+where \(X_j\) represents the \(j\)th predictor and \(\beta_j\)
+quantifies the association between that variable and the response. We
+interpret \(\beta_j\) as the average effect on \(Y\) of a one unit
+increase in \(X_j\), \emph{holding all other predictors fixed}.
+
+In matrix terms, supposing we have \(n\) observations and \(p\)
+variables, we need to define the following matrices:
+
+\begin{equation}
+ \textbf{Y}_{n \times 1} = \begin{pmatrix}
+    Y_{1} \\
+    Y_{2} \\
+    \vdots \\
+    Y_{n}
+\end{pmatrix}   \,\,\,\,\,\,\,\,\,\,\,\,  \textbf{X}_{n \times (p+1)}  = \begin{pmatrix}
+    1      & X_{11} & X_{12} & \dots  & X_{1p} \\
+    1      & X_{21} & X_{22} & \dots  & X_{2p} \\
+    \vdots & \vdots & \vdots & \ddots & \vdots \\
+    1      & X_{n1} & X_{n2} & \dots  & X_{np}
+\end{pmatrix}
+\end{equation}
+
+\begin{equation}
+ {\mathbb{\beta}}_{(p+1) \times 1} = \begin{pmatrix}
+    \beta_{0} \\
+    \beta_{1} \\
+    \vdots \\
+    \beta_{p}
+    \end{pmatrix}   \,\,\,\,\,\,\,\,\,\,\,\,  {\epsilon}_{n \times 1} = \begin{pmatrix}
+        \epsilon_{1} \\
+        \epsilon_{2} \\
+        \vdots \\
+        \epsilon_{n}
+    \end{pmatrix}
+\end{equation}
+
+In matrix terms, the general linear regression model is
+
+\[ \textbf{Y}_{n \times 1} = \textbf{X}_{n \times (p+1)} {\mathbb{\beta}}_{(p+1) \times 1} + {\epsilon}_{n \times 1} \]
+
+where,
+
+\begin{itemize}
+\tightlist
+\item
+  \(\textbf{Y}\) is a vector of responses.
+\item
+  \(\mathbb{\beta}\) is a vector of parameters.
+\item
+  \(\textbf{X}\) is a matrix of constants.
+\item
+  \(\epsilon\) is a vector of independent \emph{normal} (Gaussian)
+  random variables.
+\end{itemize}
+
+\section{Estimating the Regression
+Coefficients}\label{estimating-the-regression-coefficients}
+
+As was the case in the simple linear regression setting, the regression
+coefficients \(\beta_{0}, \beta_{1}, \ldots, \beta_{p}\) are unknown,
+and must be estimated. Given estimates
+\(\hat{\beta_{0}}, \hat{\beta_{1}}, \ldots, \hat{\beta_{p}}\), we can
+make predictions using the formula
+
+\[ \hat{y} = \hat{\beta_{0}} + \hat{\beta_{1}} x_1 + \hat{\beta_{2}} x_2 + \ldots, \hat{\beta_{p}} x_p \]
+
+We choose \(\beta_{0}, \beta_{1}, \ldots, \beta_{p}\) to minimize the
+residual sum of squares
+
+\[ \begin{aligned}
+RSS &= \sum_{i=1}^{n} (y_i - \hat{y}_i)^2 \\
+    &= \sum_{i=1}^{n} (y_1 - \hat{\beta_0} - \hat{\beta_1} \hat{x}_{i1}  - \hat{\beta_2} \hat{x}_{i2} - \ldots  -  \hat{\beta_p} \hat{x}_{ip})^2 \\
+\end{aligned}
+\]
+
+The values \(\hat{\beta_{0}}, \hat{\beta_{1}}, \ldots, \hat{\beta_{p}}\)
+that minimize the RSS are the multiple least squares regression
+coefficient estimates, they are calculated using this formula (in matrix
+terms):
+
+\[ \hat{\beta} = (\textbf{X}^T \textbf{X})^{-1}\textbf{X}^T \textbf{Y} \]
+
+To obtain \(\hat{\beta}\), we can write the residual sum of squares as
+
+\[ RSS = (\textbf{Y}-\textbf{X}\beta)^T(\textbf{Y}-\textbf{X}\beta) \]
+
+This is a quadratic function in the \(p+1\) parameters. Differentiating
+with respect to \(\beta\) we obtain \[ \begin{aligned}
+\frac{\partial RSS}{\partial \beta} &= -2\textbf{X}^T(\textbf{Y}-\textbf{X}\beta) \\
+\frac{\partial^2 RSS}{\partial \beta \partial \beta^T}   &= 2\textbf{X}^T\textbf{X}.\\
+\end{aligned}
+\]
+
+Assuming (for the moment) that \(\textbf{X}\) has full column rank, and
+hence \(\textbf{X}^T\textbf{X}\) is positive definite\footnote{Important
+  to be sure that \(\hat{\beta}\) is minimising RSS.}, we set the first
+derivative to zero
+
+\[\textbf{X}^T(\textbf{Y}-\textbf{X}\beta)=0\] to obtain the unique
+solution
+
+\[ \hat{\beta} = (\textbf{X}^T \textbf{X})^{-1}\textbf{X}^T \textbf{Y} \]
+
+Note 1:
+
+\begin{rmdinsight}
+It is a remarkable property of matrix algebra that the results for the
+general linear regression model in matrix notation appear exactly as
+those for the simple linear regression model. Only the degrees of
+freedom and other constants related to the number of \(X\) variables and
+the dimensions of some matrices are different. Which means there are
+some similarities between
+\(\hat{\beta} = (\textbf{X}^T \textbf{X})^{-1}\textbf{X}^T \textbf{Y}\)
+and \(\hat\beta_1=(s_x^2)^{-1}s_{xy}\) from the simple linear model:
+both are related to the covariance between \(\mathbf{X}\) and
+\(\mathbf{Y}\) weighted by the variance of \(\mathbf{X}\).
+\end{rmdinsight}
+
+Note 2:
+
+\begin{rmdinsight}
+If \(\textbf{X}^T \textbf{X}\) is noninvertible, the common causes might
+be having:
+
+\begin{itemize}
+\tightlist
+\item
+  Redundant features, where two features are very closely related
+  (i.e.~they are linearly dependent)
+\item
+  Too many features (e.g. \(p \geq n\)). In this case, we delete some
+  features or we use ``regularization'' (to be, maybe, explained in a
+  later lesson).
+\end{itemize}
+\end{rmdinsight}
+
+\section{Some important questions}\label{some-important-questions}
+
+When we perform multiple linear regression, we usually are interested in
+answering a few important questions.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Is at least one of the predictors \(X_1 ,X_2 ,\ldots,X_p\) useful in
+  predicting the response?
+\item
+  Do all the predictors help to explain \(Y\), or is only a subset of
+  the predictors useful?
+\item
+  How well does the model fit the data?
+\item
+  Given a set of predictor values, what response value should we
+  predict, and how accurate is our prediction?
+\end{enumerate}
+
+\textbf{\emph{Relationship Between the Response and Predictors?}}
+
+\textbf{\(F\)-Statistic}
+
+Recall that in the simple linear regression setting, in order to
+determine whether there is a relationship between the response and the
+predictor we can simply check whether \(\beta_1 = 0\). In the multiple
+regression setting with \(p\) predictors, we need to ask whether all of
+the regression coefficients are zero, i.e.~whether
+\(\beta_1 = \beta_2 = \ldots = \beta_p = 0\). As in the simple linear
+regression setting, we use a hypothesis test to answer this question. We
+test the null hypothesis,
+
+\[ H_0 : \beta_1 = \beta_2 = \ldots = \beta_p = 0 \]
+
+versus the alternative hypothesis
+
+\[ H_1 : \text{at least one} \, \beta_j \, \text{is non-zero} \]
+
+This hypothesis test is performed by computing the \(F\)-statistic
+(\emph{Fisher}):
+
+\[ F = \frac{ (\text{TSS} - \text{RSS})/p}{\text{RSS}/(n-p-1)} \sim F_{p,n-p-1} \]
+
+where, as with simple linear regression,
+\(\text{TSS} = \sum (y_i - \bar{y})^2\) and
+\(\text{RSS} = \sum (y_i - \hat{y}_i)^2\).
+
+Note that \(F_{p,n-p-1}\) represents the \emph{Fisher-Snedecor's \(F\)
+distribution} with \(p\) and \(n-p-1\) degrees of freedom. If \(H_0\) is
+true, then \(F\) is expected to be \emph{small} since ESS\footnote{Recal
+  that ESS is the explained sum of squares, ESS = TSS - RSS.} will be
+close to zero (little variation is explained by the regression model
+since \(\hat{\boldsymbol{\beta}}\approx\mathbf{0}\)).
+
+So the question we ask here: \emph{Is the whole regression explaining
+anything at all?} The answer comes from the \(F\)-test in the ANOVA
+(ANalysis Of VAriance) table. This is what we get in an ANOVA table:
+
+\begin{longtable}[]{@{}llllll@{}}
+\toprule
+Source & df & SS & MS & \(F\) & p-value\tabularnewline
+\midrule
+\endhead
+Factor (Explained) & \(p\) & ESS=SSR & MSR=ESS/\((p)\) & F=MSR/MSE &
+p-value\tabularnewline
+Error (Unexplained) & \(n-p-1\) & RSS=SSE & MSE=RSS/\((n-p-1)\) &
+&\tabularnewline
+Total & \(n-1\) & SST=TSS & & &\tabularnewline
+\bottomrule
+\end{longtable}
+
+The ANOVA table has many pieces of information. What we care about is
+the \(F\) Ratio and the corresponding p-value. We compare the \(F\)
+Ratio with \(F_{(p,n-p-1)}\) and a corresponding \(\alpha\) value
+(error).
+
+\begin{rmdcaution}
+The ``ANOVA table'' is a broad concept in statistics, with different
+variants. Here we are only covering the basic ANOVA table from the
+relation \(\text{SST} = \text{SSR} + \text{SSE}\). However, further
+sophistications are possible when \(\text{SSR}\) is decomposed into the
+variations contributed by \emph{each} predictor. In particular, for
+multiple linear regression \texttt{R}'s \texttt{anova} implements a
+\emph{sequential (type I) ANOVA table}, which is \textbf{not} the
+previous table!
+\end{rmdcaution}
+
+The \texttt{anova} function in \texttt{R} takes a model as an input and
+returns the following \emph{sequential} ANOVA table\footnote{More
+  complex -- included here just for clarification of the
+  \texttt{anova}'s output.}:
+
+\begin{longtable}[]{@{}llllll@{}}
+\toprule
+\begin{minipage}[b]{0.16\columnwidth}\raggedright\strut
+\strut
+\end{minipage} & \begin{minipage}[b]{0.14\columnwidth}\raggedright\strut
+Degrees of freedom\strut
+\end{minipage} & \begin{minipage}[b]{0.10\columnwidth}\raggedright\strut
+Sum Squares\strut
+\end{minipage} & \begin{minipage}[b]{0.11\columnwidth}\raggedright\strut
+Mean Squares\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright\strut
+\(F\)-value\strut
+\end{minipage} & \begin{minipage}[b]{0.15\columnwidth}\raggedright\strut
+\(p\)-value\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
+Predictor 1\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright\strut
+\(1\)\strut
+\end{minipage} & \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+ESS\(_1\)\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+\(\frac{\text{ESS}_1}{1}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+\(\frac{\text{ESS}_1/1}{\text{RSS}/(n-p-1)}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
+\(p_1\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
+Predictor 2\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright\strut
+\(1\)\strut
+\end{minipage} & \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+ESS\(_2\)\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+\(\frac{\text{ESS}_2}{1}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+\(\frac{\text{ESS}_2/1}{\text{RSS}/(n-p-1)}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
+\(p_2\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
+\(\vdots\)\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright\strut
+\(\vdots\)\strut
+\end{minipage} & \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+\(\vdots\)\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+\(\vdots\)\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+\(\vdots\)\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
+\(\vdots\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
+Predictor \(p\)\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright\strut
+\(1\)\strut
+\end{minipage} & \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+ESS\(_p\)\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+\(\frac{\text{ESS}_p}{1}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+\(\frac{\text{ESS}_p/1}{\text{RSS}/(n-p-1)}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
+\(p_p\)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
+Residuals\strut
+\end{minipage} & \begin{minipage}[t]{0.14\columnwidth}\raggedright\strut
+\(n - p - 1\)\strut
+\end{minipage} & \begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+RSS\strut
+\end{minipage} & \begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+\(\frac{\text{RSS}}{n-p-1}\)\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
+\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+Here the ESS\(_j\) represents the explained sum of squares (same as
+regression sum of squares) associated to the inclusion of \(X_j\) in the
+model with predictors \(X_1,\ldots,X_{j-1}\), this is: \[
+\text{ESS}_j=\text{ESS}(X_1,\ldots,X_j)-\text{ESS}(X_1,\ldots,X_{j-1}).
+\] The \(p\)-values \(p_1,\ldots,p_p\) correspond to the testing of the
+hypotheses
+
+\begin{align*}
+H_0:\beta_j=0\quad\text{vs.}\quad H_1:\beta_j\neq 0,
+\end{align*}
+
+carried out \emph{inside the linear model}
+\(Y=\beta_0+\beta_1X_1+\ldots+\beta_jX_j+\varepsilon\). This is like the
+\(t\)-test for \(\beta_j\) for the model with predictors
+\(X_1,\ldots,X_j\). Recall that there is no \(F\)-test in this version
+of the ANOVA table.
+
+\textbf{p-values}
+
+The p-values provide information about whether each individual predictor
+is related to the response, after adjusting for the other predictors.
+Let's look at the following table we obtain in general using a
+statistical software for example
+
+\begin{longtable}[]{@{}lllll@{}}
+\toprule
+& Coefficient & Std. error & \(t\)-statistic & p-value\tabularnewline
+\midrule
+\endhead
+Constant & 2.939 & 0.3119 & 9.42 & \textless{}0.0001\tabularnewline
+\(X_1\) & 0.046 & 0.0014 & 32.81 & \textless{}0.0001\tabularnewline
+\(X_2\) & 0.189 & 0.0086 & 21.89 & \textless{}0.0001\tabularnewline
+\(X_3\) & -0.001 & 0.0059 & -0.18 & 0.8599\tabularnewline
+\bottomrule
+\end{longtable}
+
+In this table we have the following model
+
+\[ Y = 2.939 + 0.046 X_1 + 0.189 X_2 - 0.001 X_3 \]
+
+Note that for each individual predictor a \(t\)-statistic and a p-value
+were reported. These p-values indicate that \(X_1\) and \(X_2\) are
+related to \(Y\), but that there is no evidence that \(X_3\) is
+associated with \(Y\), in the presence of these two.
+
+\textbf{\emph{Deciding on Important Variables}}
+
+The most direct approach is called \emph{all subsets} or \emph{best
+subsets} regression: we compute the least squares fit for all possible
+subsets and then choose between them based on some criterion that
+balances training error with model size.
+
+However we often can't examine all possible models, since they are
+\(2^p\) of them; for example when \(p = 40\) there are over a billion
+models! Instead we need an automated approach that searches through a
+subset of them. Here are two commonly use approaches:
+
+\textbf{Forward selection}:
+
+\begin{itemize}
+\tightlist
+\item
+  Begin with the \emph{null model} --- a model that contains an
+  intercept (constant) but no predictors.
+\item
+  Fit \(p\) simple linear regressions and add to the null model the
+  variable that results in the lowest RSS.
+\item
+  Add to that model the variable that results in the lowest RSS amongst
+  all two-variable models.
+\item
+  Continue until some stopping rule is satisfied, for example when all
+  remaining variables have a p-value above some threshold.
+\end{itemize}
+
+\textbf{Backward selection}:
+
+\begin{itemize}
+\tightlist
+\item
+  Start with all variables in the model.
+\item
+  Remove the variable with the largest p-value --- that is, the variable
+  that is the least statistically significant.
+\item
+  The new \((p − 1)\)-variable model is fit, and the variable with the
+  largest p-value is removed.
+\item
+  Continue until a stopping rule is reached. For instance, we may stop
+  when all remaining variables have a significant p-value defined by
+  some significance threshold.
+\end{itemize}
+
+\begin{rmdinsight}
+There are more systematic criteria for choosing an ``optimal'' member in
+the path of models produced by forward or backward stepwise selection.
+These include \emph{Mallow's \(C_p\)} , \emph{Akaike information
+criterion (AIC)}, \emph{Bayesian information criterion (BIC)},
+\emph{adjusted \(R^2\)} and \emph{Cross-validation (CV)}.
+\end{rmdinsight}
+
+\textbf{\emph{Model Fit}}
+
+Two of the most common numerical measures of model fit are the RSE and
+\(R^2\), the fraction of variance explained. These quantities are
+computed and interpreted in the same fashion as for simple linear
+regression. Recall that in simple regression, \(R^2\) is the square of
+the correlation of the response and the variable. In multiple linear
+regression, it turns out that it equals \(Cor(Y, \hat{Y})^2\) , the
+square of the correlation between the response and the fitted linear
+model; in fact one property of the fitted linear model is that it
+maximizes this correlation among all possible linear models. An \(R^2\)
+value close to 1 indicates that the model explains a large portion of
+the variance in the response variable.
+
+In general RSE is defined as
+
+\[ \text{RSE} = \sqrt{\frac{1}{n-p-1}\text{RSS}} \]
+
+\subsection{Other Considerations in Regression
+Model}\label{other-consid}
+
+\textbf{Qualitative Predictors}
+
+\begin{itemize}
+\tightlist
+\item
+  If we have a categorial (qualitative) variable (feature), how do we
+  fit into a regression equation?
+\item
+  For example, if \(X_1\) is the gender (male or female).
+\item
+  We can code, for example, male = 0 and female = 1.
+\item
+  Suppose \(X_2\) is a quantitative variable, the regression equation
+  becomes:
+\end{itemize}
+
+\[ Y_i \approx \beta_0 + \beta_1 X_1 + \beta_2 X_2 = \begin{cases}
+  \beta_0 + \beta_2 X_2 & \text{ if male} \\
+  \beta_0 + \beta_1 X_1 + \beta_2 X_2 & \text{ if female}
+\end{cases} \]
+
+\begin{itemize}
+\tightlist
+\item
+  Another possible coding scheme is to let male = -1 and female = 1, the
+  regression equation is then:
+\end{itemize}
+
+\[ Y_i \approx \beta_0 + \beta_1 X_1 + \beta_2 X_2 = \begin{cases}
+  \beta_0 -\beta_1 X_1 + \beta_2 X_2 & \text{ if male} \\
+  \beta_0 + \beta_1 X_1 + \beta_2 X_2 & \text{ if female}
+\end{cases} \]
+
+\textbf{Interaction Terms}
+
+\begin{itemize}
+\tightlist
+\item
+  When the effect on \(Y\) of increasing \(X_1\) depends on another
+  \(X_2\).
+\item
+  We may in this case try the model
+\end{itemize}
+
+\[ Y_i = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \beta_3 X_1 X_2 \]
+
+\begin{itemize}
+\tightlist
+\item
+  \(X_1 X_2\) is the Interaction term.
+\end{itemize}
+
+\section{How to select the best performing
+model}\label{how-to-select-the-best-performing-model}
+
+After trying different linear models, you need to make a choice which
+model you want to use. More specifically, the questions that one can
+ask: ``How to determine which model suits best to my data? Do I just
+look at the R square, SSE, etc.?'' and ``As the interpretation of that
+model (quadratic, root, etc.) will be very different, won't it be an
+issue?''
+
+The second question can be answered easily. First, find a model that
+best suits to your data and then interpret its results. It is good if
+you have ideas how your data might be explained. However, interpret the
+best model, only. Now we will address the first question. Note that
+there are multiple ways to select a best model. In addition, this
+approach only applies to univariate models (simple models) whith just
+one input variable.
+
+Use the following interactive application and play around with different
+datasets and models. Notice how parameters change and become more
+confident with assessing simple linear models.
+
+\subsection*{\texorpdfstring{Use the Adjusted \(R_{adj}^2\) for
+univariate
+models}{Use the Adjusted R\_\{adj\}\^{}2 for univariate models}}\label{use-the-adjusted-r_adj2-for-univariate-models}
+\addcontentsline{toc}{subsection}{Use the Adjusted \(R_{adj}^2\) for
+univariate models}
+
+If you only use one input variable, the adjusted \(R_{adj}^2\) value
+gives you a good indication of how well your model performs. It
+illustrates how much variation is explained by your model.
+
+In contrast to the simple \(R^2\)\footnote{Recall that
+  \(R^2 = 1- \frac{\text{RSS}}{\text{TSS}}\)}, the adjusted adjusted
+\(R_{adj}^2\)\footnote{It is defined as
+  \(R_{adj}^2 = 1- \frac{\text{RSS}/(n-p-1)}{\text{TSS}/(n-1)} = 1- \frac{\text{RSS}}{\text{TSS}}\times\frac{n-1}{n-p-1}\)}
+takes the number of input factors into account. It penalizes too many
+input factors and favors parsimonious models.
+
+The adjusted \(R_{adj}^2\) is sensitive to the amount of noise in the
+data. As such, only compare this indicator of models for the same
+dataset than comparing it across different datasets.
+
+
+
+
+
+
+\begin{figure}[h!]
+
+{\centering \includegraphics[width=0.7\linewidth]{img/R2vsAdjR2} 
+
+}
+
+\caption{Comparison of \(R^2\) and \(R^2_{\text{adj}}\) for
+\(n=200\) and \(p\) ranging from \(1\) to \(198\). \(M=100\) datasets
+were simulated with \textbf{only the first two} predictors being
+significant. The thicker curves are the mean of each color's curves.}\label{fig:R2}
+\end{figure}
+
+Figure \ref{fig:R2} contains the results of an experiment where 100
+datasets were simulated with \textbf{only the first two} predictors
+being significant. As you can see \(R^2\) increases linearly with the
+number of predictors considered, although only the first two ones were
+important! On the contrary, \(R^2_\text{adj}\) only increases in the
+first two variables and then is flat on average, but it has a huge
+variability when \(p\) approaches \(n-2\). The experiment evidences that
+\textbf{\(R^2_\text{adj}\) is more adequate than the \(R^2\) for
+evaluating the fit of a multiple linear regression}.
+
+\subsection*{Have a look at the residuals or error
+terms}\label{have-a-look-at-the-residuals-or-error-terms}
+\addcontentsline{toc}{subsection}{Have a look at the residuals or error
+terms}
+
+What is often ignored are error terms or so-called residuals. They often
+tell you more than what you might think. The residuals are the
+difference between your predicted values and the actual values. Their
+benefit is that they can show both the magnitude as well as the
+direction of the errors.
+
+Let's have a look at an example:
+
+\includegraphics{img/residuals.png}
+
+Here, we try to predict a polynomial dataset with a linear function.
+Analyzing the residuals shows that there are areas where the model has
+an upward or downward bias.
+
+For \texttt{50\ \textless{}\ x\ \textless{}\ 100}, the residuals are
+above zero. So in this area, the actual values have been higher than the
+predicted values --- our model has a downward bias.
+
+For \texttt{100\ \textless{}\ x\ \textless{}\ 150}, however, the
+residuals are below zero. Thus, the actual values have been lower than
+the predicted values --- the model has an upward bias.
+
+It is always good to know, whether your model suggests too high or too
+low values. But you usually do not want to have patterns like this.
+
+The residuals should be zero on average (as indicated by the mean) and
+they should be equally distributed. Predicting the same dataset with a
+polynomial function of \texttt{3\ degrees} suggests a much better fit:
+
+\includegraphics{img/residuals2.png}
+
+In addition, you can observe whether the variance of your errors
+increases. In statistics, this is called
+\href{https://en.wikipedia.org/wiki/Heteroscedasticity}{Heteroscedasticity}.
+You can fix this easily with robust standard errors. Otherwise, your
+hypothesis tests are likely to be wrong.
+
+\subsection*{Histogram of residuals}\label{histogram-of-residuals}
+\addcontentsline{toc}{subsection}{Histogram of residuals}
+
+Finally, the histogram summarizes the magnitude of your error terms. It
+provides information about the bandwidth of errors and indicates how
+often which errors occurred.
+
+\includegraphics{img/residuals_hist.png}
+\includegraphics{img/residuals_hist2.png}
+
+The above screenshots show two models for the same dataset. In the first
+histogram, errors occur within a range of -338 and 520. In the second
+histogram, errors occur within -293 and 401. So the outliers are much
+lower. Furthermore, most errors in the model of the second histogram are
+closer to zero. So we would favor the second model.
 
 ◼
 
